[package]
name = "slang-test-interceptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sti"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
rand = "0.8"
csv = "1"
sysinfo = "0.32"
colored = "2"
anyhow = "1"
crossbeam-channel = "0.5"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
