[package]
name = "slang-test-interceptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sti"
path = "src/main.rs"

[features]
default = []
gpu-info = ["dep:gfxinfo"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
csv = "1"
sysinfo = "0.32"
colored = "2"
anyhow = "1"
crossbeam-channel = "0.5"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
indicatif = "0.17"
terminal_size = "0.4"
os_pipe = "1"
rand = "0.8"
gfxinfo = { version = "0.1", features = ["gpu_info"], optional = true }
